[package]
name = "dtiw385"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.2", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"


[dev-dependencies]
wiremock = "0.6"
serde_json = "1"
